--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,13 +8,15 @@ body {
     background-color: #d9dcd6;
 }
 
+/* removed unnecessary header class elements */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-/* removed unnecessary header class elements */
+
+/* removed .header */
 h1 {
     display: inline-block;
     font-size: 48px;
@@ -24,6 +26,7 @@ h1 {
     color: #d9dcd6;
 }
 
+/* updated to nav as per html*/
 nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -32,6 +35,7 @@ nav {
     font-size: 20px;
 }
 
+/* removed .header div element */
 ul {
     list-style-type: none;
 }
@@ -54,7 +58,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("./assets/images/digital-marketing-meeting.jpg");
+    background-image: url("digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -75,8 +79,9 @@ p {
     margin-left: 25px;
 }
 
+/* Changed order of code according to layout of site*/
 /* Grouped selectors together */
-#search-engine-optimization, #online-reputation-management, #social-media-marketing {
+.content section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -96,7 +101,8 @@ h2 {
     font-size: 36px;
 }
 
-.benefits {
+/* replaced to aside element */
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -108,7 +114,7 @@ h2 {
 }
 
 /* Group selectors together */
-#benefit-lead, #benefit-cost, #benefit-brand {
+.benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
